proteus/graphql-api/12.security-group.tf
# Create Security Group for the Load Balancer
# terraform aws create security group
resource "aws_security_group" "alb-security-group" {
  name        = "ALB Security Group"
  description = "Enable HTTP/HTTPS access to ports 80 and 443"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    description = "HTTP Access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTPS Access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Custom Access"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "proteus-alb-security-group"
  }
}

# Create Security Group for the Bastion Host aka Jump Box
# terraform aws create security group
# resource "aws_security_group" "ssh-security-group" {
#   name        = "SSH Security Group"
#   description = "Enable SSH access to port 22"
#   vpc_id      = aws_vpc.vpc.id
#   ingress {
#     description = "SSH Access"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = [var.ssh-location]
#   }
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   tags = {
#     Name = "proteus-ssh-security-group"
#   }
# }

# Create Security Group for the Web Server
# terraform aws create security group
# resource "aws_security_group" "webserver-security-group" {
#   name        = "Web Server Security Group"
#   description = "Enable HTTP/HTTPS access to ports 80 and 443 via ALB, and SSH access on port 22 via SSH Security Group"
#   vpc_id      = aws_vpc.vpc.id
#   ingress {
#     description     = "HTTP Access"
#     from_port       = 80
#     to_port         = 80
#     protocol        = "tcp"
#     security_groups = [aws_security_group.alb-security-group.id]
#   }
#   ingress {
#     description     = "HTTPS Access"
#     from_port       = 443
#     to_port         = 443
#     protocol        = "tcp"
#     security_groups = [aws_security_group.alb-security-group.id]
#   }
#   ingress {
#     description     = "SSH Access"
#     from_port       = 22
#     to_port         = 22
#     protocol        = "tcp"
#     security_groups = [aws_security_group.ssh-security-group.id]
#   }
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   tags = {
#     Name = "proteus-webserver-security-group"
#   }
# }
